# AutoEMXSp

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt
autoemxsp/EM_driver/: PhenomXL.py
autoemxsp/core/: EMXSp_composition_analyser.py  EM_controller.py  EM_particle_finder.py  XSp_fitter.py
autoemxsp/runners/: batch_acquire_and_analyze.py  batch_acquire_experimental_stds.py  batch_quantify_and_analyze.py  fit_and_quantify_spectrum.py
autoemxsp/scripts/: Collect_Particle_Statistics.py  Process_Particle_Stats_Files.py  Run_Acquisition_PrecursorMix.py  Run_Acquisition_Quant_Analysis.py  Run_Experimental_Standard_Collection.py
autoemxsp/tools/: config_classes.py  constants.py
autoxsp/EM_driver/: PhenomXL.py  __init__.py
autoxsp/XSp_calibs/: __init__.py
autoxsp/core/: EMXSp_composition_analyser.py  EM_controller.py  EM_particle_finder.py  XSp_fitter.py  XSp_quantifier.py
autoxsp/runners/: analyze_sample.py  batch_acquire_and_analyze.py  batch_acquire_experimental_stds.py  batch_fit_spectra.py  batch_quantify_and_analyze.py  fit_and_quantify_spectrum.py
autoxsp/scripts/: Run_Acquisition_PrecursorMix.py  Run_Acquisition_Quant_Analysis.py  Run_Experimental_Standard_Collection.py  Run_SDD_Calibration.py
paper_data/: Benchmark_Comp_Accuracy.py
scripts/: Fit_Quant_Single_Spectrum.py  Run_Acquisition_PrecursorMix.py  Run_Acquisition_Quant_Analysis.py  Run_Analysis.py  Run_EDS_Calibration.py  Run_Experimental_Standard_Collection.py  Run_Quantification_Analysis.py  Run_Quantification_PrecursorMix.py
tests/: Test_Compositional_Analysis.py  Test_Fit_Quant_Single_Spectrum.py  Test_Navcam_Ctape_detection.py  Test_Particle_Finder_Frame_INCOMPLETE.py  Test_Quantification_Analysis.py
(+43 files in other folders)
