[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoxsp"
version = “0.1.0”
description = "AutoXSp - Automated Compositional Characterization via X-Ray Spectroscopy at an Electron Microscope”
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Andrea Giant”, email = “agiunto@lbl.gov }
]
requires-python = ">=3.8"
dependencies = [
    "cvxpy==1.5.3",
    "lmfit==1.3.2",
    "matplotlib==3.10.6",
    "numpy==2.3.3",
    "pandas==2.3.2",
    "pymatgen==2024.11.13",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "seaborn==0.13.2",
    "sympy==1.13.2",
    "yellowbrick==1.5"
]

[tool.setuptools.packages.find]
where = ["."]