[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoxsp-test"
version = "0.1.0"
description = "AutoXSp - Automated Compositional Characterization via X-Ray Spectroscopy at an Electron Microscope"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Andrea Giunto", email = "agiunto@lbl.gov" }
]
requires-python = ">=3.8"
dependencies = [
    "cvxpy==1.5.2",
    "lmfit==1.3.2",
    "matplotlib==3.5.2",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pymatgen==2024.11.13",
    "scikit-learn==1.5.1",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "sympy==1.13.2",
    "yellowbrick==1.5"
    "opencv==4.10.0"
    "tifffile==2023.4.12"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.exclude-package-data]
autoxsp = ["detector_response_convolution_matrices.json"]